# confiacim-api

./: .dockerignore  .env_sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  pipeline.yml  pyproject.toml  requirements.txt
._github/workflows/: CI.yml
.github/: CODEOWNERS
.github/config/: deploy-config.yml
.github/configs/: deploy-config.yml  pipeline-config.yml
.github/workflows/: CI.yml  finish-release.yml  redeploy.yml.disabled  snapshot.yml.disable  start-release.yml
certs/: nexus.petrobras.com.br.crt
confiacim_api/: __init__.py  app.py  celery.py  cli.py  conf.py  connection_string.py  const.py  constants.py  correlations.py  database.py  dist_params_conversor.py  errors.py  files_and_folders_handlers.py  generate_templates_form.py  logger.py  models.py  schemas.py  security.py  sgld.py  system_stats.py  tasks.py  types.py  utils.py  variables_group.py  write_csv.py
confiacim_api/files_and_folders_handlers/: __init__.py  core.py  hidration.py  loads.py  materials.py
confiacim_api/routers/: __init__.py  admin.py  auth.py  base.py  case.py  form.py  tencim.py  users.py  variable_group.py
confiacim_api/routes/: __init__.py  admin.py  auth.py  base.py  case.py  celery.py  simulation.py  users.py
confiacim_api/schemes/: __init__.py  base.py  case.py  form.py  tencim.py  users.py  variable_group.py
docker/nginx/: Dockerfile  default.conf
docker/postgres/: Dockerfile  create-tables.sql
docker/sentinel/: sentinel.conf
migrations/: env.py  migrations.sql
migrations/versions/: 01124ddc640a_primeira_migração_descartavel.py  097588d1c5ba_add_variables_stats_in_formresult.py  1ab12ae567d7_add_generated_case_files.py  25b0f40bb3ba_add_critical_point_in_tencim_results.py  368fdacf6a3e_add_status_in_tencim_results.py  374345143513_change_name_and_type.py  49c45e37ed9a_add_critical_point_in_form_results.py  4c4ff3149075_primeira_migração.py  4e4afb61eb68_add_model_hidrationprops.py  553a83605190_add_materials_model.py  78513c2da84f_add_var_group.py  7bb0922230d5_add_the_base_file.py  804fd92d2ad4_add_constrain_user_case.py  949a58ef46fc_add_new_props.py  a14583722acf_add_rc_limit_in_tencimresult.py  b26108b3a19d_usuario.py  b2aac65bab92_add_description_field_in_case.py  bf6ce47c0449_add_model_loadsbasecaseinfo.py  bfab4cee771d_user_admin.py  ce65ed45d626_add_created_at_and_updated_at.py  d0d2bbb452e9_add_from_results.py  d2684f3b1df2_add_iteration_infos.py  d61d5f077ec5_primeira_migração.py  e9fd6582f431_add_description_in_formresult_and_.py  f1232937d0c4_initial_migration.py  ff0116c0539e_tencim_results.py
nginx/: default.conf
postgres/: Dockerfile  create_tables.sql
tests/: conftest.py  constants.py  test_conf.py  test_connection_string.py  test_correlations.py  test_csv_results.py  test_db.py  test_dist_params.py  test_files_and_folders_handlers.py  test_generate_templates_form.py  test_security.py  test_system_stats.py  test_task.py  test_utils.py  tests_celery_configs.py  tests_cli.py  tests_sgld.py  tests_variables_group.py
tests/files_and_folders_handlers/: test_core.py  test_loads.py  test_materials.py  tests_core.py  tests_hidration.py  tests_loads.py
tests/models/: test_case.py  test_form_results.py  test_hidrationprops.py  test_loads.py  test_materials.py  test_simulation.py  test_tencim_results.py  test_user.py  test_variable_group.py  test_variable_groups.py
tests/routers/: test_admin.py  test_base.py  test_celery.py  test_simulation.py
tests/routers/auth/: test_token.py  test_whoami.py
tests/routers/case/: test_create.py  test_delete.py  test_download.py  test_list.py  test_retrieve.py  test_retrieve_hidrationprops.py  test_retrieve_loads.py  test_retrieve_materials.py  test_retrive.py  (+4 more)
tests/routes/: test_admin.py  test_base.py  test_celery.py  test_simulation.py  test_users.py  tests_admin.py
tests/schemes/: test_form.py
tests/tasks/: test_form.py  test_tencim_standalone.py  tests_form.py
(+35 files in other folders)
